# sentrytop

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  install.sh  requirements.txt  test_cli.py  test_integration.py  ui_main.py
.github/workflows/: test.yml
agent/: .gitignore  Cargo.toml
agent/src/: app.rs  events.rs  main.rs
agent/src/db/: mod.rs
agent/src/engine/: mod.rs
agent/src/telemetry/: mod.rs
agent/src/ui/: mod.rs
assets/: config.json  intel_db.json  intel_db.txt
collector/: Makefile  sentry_collector
collector/src/: json_utils.c  logger.c  logger.h  proc_mapper.c  socket_parser.c
docs/: API_REFERENCE.md  DEPLOYMENT.md  INSTALLATION.md  THREAT_MODELING.md  blog_post.md
engine/: dependency-reduced-pom.xml  pom.xml
engine/src/main/java/com/sentrytop/: AuthLogMonitor.java  BehavioralAnalyzer.java  Config.java  EngineMain.java  IntelDb.java  IntelEnricher.java  IntelEntry.java  ThreatAnalyzer.java
engine/src/test/java/com/sentrytop/: ThreatAnalyzerTest.java
scripts/: install.sh  integration_test.sh  sentrytop  setup.sh  setup_cron.sh  stress_test.sh  uninstall.sh  update_intel.py  update_intel_cron.sh
sentrytop-common/: Cargo.toml
sentrytop-common/src/: lib.rs
sentrytop-ebpf/: Cargo.toml
sentrytop-ebpf/src/: lib.rs
ui/: app.py  main.py  sentrytop_cli.py
ui/components/: alerts.py  database.py  fifo_reader.py  keyboard.py  stats_cache.py
ui/modes/: base.py  log_viewer.py  main_menu.py  monitor.py  network_insight.py  process_manager.py
ui/rendering/: ascii_art.py  engine.py
ui/utils/: constants.py  logger.py
