[package]
name = "sentrytop-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
# Updated Aya Dependencies (matching 0.13.x ecosystem)
aya = { version = "0.13.0", features = ["async_tokio"] }
aya-log = "0.2.1"
tokio = { version = "1.36", features = ["full"] }

# Shared Logic
sentrytop-common = { path = "../common" }

# Data & Logging
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Performance & Utils
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
futures-util = "0.3"
nix = { version = "0.28", features = ["signal", "process"] }
uuid = { version = "1.7", features = ["v4"] }
sha2 = "0.10"
lru = "0.12"
